# ssh-tunnel-config

./: .bashrc_tunnels.txt  .gitattributes  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
config/: sample.env  ssh_config.yml  ssh_config.yml.example  tunnel-hosts.yaml
extras/: systemd-tunnel-winrm.service
scripts/: generate_bashrc.py  kill_all.sh  launch_all.sh  list_configs.py  shutdown_tunnels.py  shutdown_tunnels.sh  tunnel_one.sh
templates/: .bashrc_tunnels.template.txt  tunnel-hosts.sample.yaml
