[project]
name = "ssh-tunnel-config"
version = "1.0.0"
description = "SSH tunnel manager with profile switching and automated .bashrc snippet generation"
authors = [
    { name="Michel J. Klein", email="michel.klein@example.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"

[project.scripts]
ssh-tunnel = "scripts.generate_bashrc:main"

[tool.setuptools]
packages = ["scripts"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
